<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/standard_margin"
    android:paddingRight="@dimen/standard_margin"
    android:background="@drawable/snobs"
    tools:context="com.example.android.justjava.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/name"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/standard_margin"
         />
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="@dimen/text_size_small"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/standard_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:text="@string/decrease"
            android:onClick="decrement"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_quantity"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:padding="@dimen/padding_quantity"
            />
        <Button
            android:layout_width="@dimen/button"
            android:layout_height="@dimen/button"
            android:text="@string/increase"
            android:onClick="increment"/>


    </LinearLayout>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_small"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"/>
        <CheckBox
            android:id="@+id/check_box_topping1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping1"
            android:textSize="@dimen/text_size_small"
            android:paddingLeft="@dimen/padding_medium"/>
        <CheckBox
            android:id="@+id/check_box_topping2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping2"
            android:textSize="@dimen/text_size_small"
            android:paddingLeft="@dimen/padding_medium"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"/>
    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_price"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_medium"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:layout_marginTop="@dimen/standard_margin"
        />
    </LinearLayout>
</ScrollView>